tests/integration/error/arena_allocation_bad_arena.alo
// expect-error: Type mismatch in arena allocation: expected '&Arena', got 'int'

struct Point {
  x: int,
  y: int
}

fun main() -> void {
  imut p: &Point = new(1) Point {
    x: 10,
    y: 20
  };
}
